# OpenWize

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  README.rst  conf_common.py
demo/Nucleo-L476/app/: CMakeLists.txt
demo/Nucleo-L476/app/cfg/: DefaultParams.xml  LANParams.xml  LoggerParams.xml  MergedParam.xml
demo/Nucleo-L476/app/include/: app_entry.h  storage.h
demo/Nucleo-L476/app/src/: app_entry.c  storage.c
demo/Nucleo-L476/app/sys/: port.c  rtos.c  sys_init.c
demo/Nucleo-L476/app_wLITF/LoItf/: CMakeLists.txt
demo/Nucleo-L476/app_wLITF/LoItf/include/: loitf.h
demo/Nucleo-L476/app_wLITF/LoItf/src/: loitf.c
demo/Nucleo-L476/board/: CMakeLists.txt
demo/Nucleo-L476/board/include/: main.h  stm32l4xx_it.h
demo/Nucleo-L476/board/ld/: STM32L476RGTX_FLASH.ld
demo/Nucleo-L476/board/src/: main.c  stm32l4xx_hal_hires_time.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
demo/Nucleo-L476/bsp/: CMakeLists.txt
demo/Nucleo-L476/bsp/include/: bsp.h  bsp_boot.h  bsp_flash.h  bsp_gpio.h  bsp_gpio_it.h  bsp_i2c.h  bsp_lp.h  bsp_lptimer.h  bsp_rtc.h  bsp_uart.h  common.h  pin_cfg.h  platform.h
demo/Nucleo-L476/bsp/src/: bsp.c  bsp_boot.c  bsp_flash.c  bsp_gpio.c  bsp_gpio_it.c  bsp_i2c.c  bsp_lp.c  bsp_lptimer.c  bsp_rtc.c  bsp_uart.c  fault_handler.c  platform.c  sys_handler.c  syscalls.c
demo/Nucleo-L476/bsp/unittest/: TestBSP_LpWakeup.c  TestBSP_RTC.c  TestBSP_uart.c  TestGrpRunBSP.c
demo/Nucleo-L476/device/FlashStorage/: CMakeLists.txt
demo/Nucleo-L476/device/FlashStorage/include/: flash_storage.h
demo/Nucleo-L476/device/FlashStorage/src/: flash_storage.c
demo/Nucleo-L476/device/LocalItf/: CMakeLists.txt
demo/Nucleo-L476/device/LocalItf/include/: local_itf.h
demo/Nucleo-L476/device/LocalItf/src/: local_itf.c
demo/Nucleo-L476/device/PhyFake/: CMakeLists.txt
demo/Nucleo-L476/device/PhyFake/include/: phy_layer_private.h
demo/Nucleo-L476/device/PhyFake/src/: phy_layer.c
demo/Nucleo-L476/device/Utils/Perf/: CMakeLists.txt
docs/: Doxyfile  OpenWize.rst  (+9 more)
sources/: CMakeLists.txt  OpenWize_Options.cmake
sources/Samples/: CMakeLists.txt
sources/Samples/CRC_sw/: CMakeLists.txt
sources/Samples/CRC_sw/include/: crc_sw.h
sources/Samples/CRC_sw/src/: crc_sw.c
sources/Samples/CRC_sw/unittest/: TestCrc_sw.c  TestGrpRunCrc_sw.c
sources/Samples/Crypto/: CMakeLists.txt
sources/Samples/Crypto/include/: crypto.h  key_priv.h
sources/Samples/Crypto/src/: confidentiality.c  integrity.c  key.c  utils_secure.c  utils_secure.h
sources/Samples/Crypto/unittest/: CMakeLists.txt  TestCrypto.c  TestGrpRunCrypto.c
sources/Samples/Decomp/: CMakeLists.txt
sources/Samples/Decomp/include/: decomp.h  lzma_decode.h
sources/Samples/Decomp/src/: decomp.c  lzma_decode.c
sources/Samples/Decomp/unittest/: CMakeLists.txt  TestDecomp.c  TestGrpRunDecomp.c  _img.h
sources/Samples/Decomp/unittest/golden/: app.bin.lzma
sources/Samples/Decomp/unittest/helper/: _img.c  _img_helper.h  gen_file.sh
sources/Samples/ImgStorage/: CMakeLists.txt
sources/Samples/ImgStorage/include/: img_storage.h
sources/Samples/ImgStorage/include/private/: img_storage_private.h
sources/Samples/ImgStorage/src/: img_storage.c
sources/Samples/ImgStorage/unittest/: Gen_loremIpsum.sh  Latin-Lipsum.txt  TestGrpRunImgStorage.c  TestImgStorage.c  TestImgStorageInt.c  loremIpsum.h  prj_mock.yml
sources/Samples/Logger/: CMakeLists.txt
sources/Samples/Logger/include/: color.h  logger.h
sources/Samples/Logger/src/: color.c  logger.c
sources/Samples/Parameters/: CMakeLists.txt
sources/Samples/Parameters/include/: parameters.h  parameters_def.h  parameters_lan_ids.h
sources/Samples/Parameters/src/: parameters.c
sources/Samples/Parameters/unittest/: TestGrpRunParameters.c  TestParameters.c  parameters_cfg.c  parameters_cfg.h  parameters_default.c
sources/Samples/ReedSolomon/: CMakeLists.txt
sources/Samples/ReedSolomon/include/: rs.h
sources/Samples/ReedSolomon/src/: rs.c
sources/Samples/ReedSolomon/unittest/: TestGrpRunReedSolomon.c  TestReedSolomon.c
sources/Samples/TimeEvt/: CMakeLists.txt
sources/Samples/TimeEvt/include/: time_evt.h
sources/Samples/TimeEvt/src/: time_evt.c
sources/Samples/TimeEvt/unittest/: TestGrpRunTimeEvt.c  TestTimeEvt.c  TestTimeEvtInt.c  prj_mock.yml
sources/WizeCore/: CMakeLists.txt
sources/WizeCore/app/: CMakeLists.txt
sources/WizeCore/app/include/: app_layer.h  ses_dispatcher.h  time_mgr.h  wize_api.h  wize_banner.h
sources/WizeCore/app/include/internal/: adm_internal.h  dwn_internal.h  inst_internal.h
sources/WizeCore/app/include/private/: ses_dispatcher.h  wize_app.h
sources/WizeCore/app/src/: ses_dispatcher.c  time_mgr.c  wize_api.c
sources/WizeCore/app/src/internal/: adm_internal.c  dwn_internal.c  inst_internal.c
sources/WizeCore/app/src/private/: ses_dispatcher.c  wize_app.c
sources/WizeCore/app/template/: app_template.c  app_template.h  ext_fw_buffer_template.c  ext_fw_buffer_template.h
sources/WizeCore/app/unittest/: CMakeLists.txt  TestGrpRunWizeCoreApi.c  TestWizeCoreAppWizeApi.c  prj_mock.yml
sources/WizeCore/mgr/: CMakeLists.txt
sources/WizeCore/mgr/include/: adm_mgr.h  app_layer.h  dwn_mgr.h  inst_mgr.h  net_mgr.h  ses_common.h  time_mgr.h
sources/WizeCore/mgr/src/: adm_mgr.c  dwn_mgr.c  inst_mgr.c  net_mgr.c  ses_common.c  time_mgr.c
sources/WizeCore/mgr/unittest/: CMakeLists.txt  TestGrpRunWizeCoreMgr.c  TestWizeCoreMgrAdm.c  TestWizeCoreMgrDwn.c  TestWizeCoreMgrInst.c  TestWizeCoreMgrNet.c  TestWizeCoreMgrTime.c
sources/WizeCore/net/: CMakeLists.txt
sources/WizeCore/net/include/: net_api.h  net_api_private.h  phy_itf.h  phy_layer.h
sources/WizeCore/net/src/: net_api.c
sources/WizeCore/net/unittest/: TestGrpRunWizeCoreNet.c  TestWizeCoreNet.c  prj_mock.yml
sources/WizeCore/proto/: CMakeLists.txt
sources/WizeCore/proto/include/: proto.h  proto_api.h  proto_private.h
sources/WizeCore/proto/src/: proto.c
sources/WizeCore/proto/unittest/: TestGrpRunWizeCoreProto.c  TestWizeCoreProto.c
sources/config.in/: OpenWize_config.in  external_cmake.in
(+487 files in other folders)
